--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>FizzBuzz</title>
-
+<script type="text/javascript" src="js/script.js"></script>
 
 </head>
 <body> 
-
+<span id=fizzBuzzCounter></span>
 
 
 </body>
